[tool.poetry]
name = "ddharmon"
version = "0.1.0"
description = "Python client for the BioMapper2 API — map biological entities to standardized knowledge graph identifiers"
authors = ["Trent Leslie <trent@phenomehealth.org>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/trentleslie/ddharmon"
repository = "https://github.com/trentleslie/ddharmon"
documentation = "https://github.com/trentleslie/ddharmon#readme"
keywords = ["bioinformatics", "metabolomics", "knowledge-graph", "biomapper", "multi-omics"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
packages = [{include = "ddharmon", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
httpx = "^0.27"
pydantic = "^2.0"
python-dotenv = "^1.0"

[tool.poetry.extras]
metabolon = ["pandas", "openpyxl"]
notebook  = ["tqdm", "nest-asyncio"]
all       = ["pandas", "openpyxl", "tqdm", "nest-asyncio"]

[tool.poetry.group.metabolon.dependencies]
pandas   = {version = "^2.0", optional = true}
openpyxl = {version = "^3.1", optional = true}

[tool.poetry.group.notebook.dependencies]
tqdm        = {version = "^4.66", optional = true}
nest-asyncio = {version = "^1.6", optional = true}

[tool.poetry.group.dev.dependencies]
pytest          = "^8.0"
pytest-asyncio  = "^0.23"
pytest-cov      = "^5.0"
respx           = "^0.21"
ruff            = "^0.4"
mypy            = "^1.10"
pandas-stubs    = "^2.0"
types-tqdm      = "^4.66"
nbconvert = "^7.17.0"
ipykernel = "^7.2.0"

[build-system]
requires      = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# ---------------------------------------------------------------------------
# Ruff
# ---------------------------------------------------------------------------
[tool.ruff]
target-version = "py311"
line-length    = 100
src            = ["src", "tests"]

[tool.ruff.lint]
select  = ["E", "F", "I", "UP", "B", "SIM", "ANN"]
ignore  = ["ANN101", "ANN102"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["ANN"]

# ---------------------------------------------------------------------------
# Mypy
# ---------------------------------------------------------------------------
[tool.mypy]
python_version         = "3.11"
strict                 = true
warn_return_any        = true
warn_unused_configs    = true
disallow_untyped_defs  = true
disallow_any_generics  = true

[[tool.mypy.overrides]]
module = ["nest_asyncio"]
ignore_missing_imports = true

# ---------------------------------------------------------------------------
# Pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths    = ["tests"]
addopts      = "--cov=ddharmon --cov-report=term-missing --cov-fail-under=80"
